--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.remloc1"
+        applicationId "com.remlocteam.remloc1"
         minSdk 21
         targetSdk 32
         versionCode 1
@@ -50,11 +50,12 @@ android {
 dependencies {
 
     implementation platform('com.google.firebase:firebase-bom:30.0.1')
-    implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
     implementation 'com.google.android.gms:play-services-auth:20.2.0'
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'com.google.firebase:firebase-analytics-ktx'
 
     implementation 'com.github.bumptech.glide:glide:4.8.0'
 
