--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,17 +2,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.remlocteam.remloc1">
 
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.SEND_SMS" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY" />
-    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
 
     <application
+        android:name=".foregroundLocationCheck.LocationApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -20,34 +21,40 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RemLoc1">
         <activity
-            android:name="com.remlocteam.remloc1.MapActivity"
-            android:exported="true"
-            android:parentActivityName="com.remlocteam.remloc1.HomeActivity" />
+            android:name=".PermissionActivity"
+            android:exported="false" />
+
+        <service
+            android:name=".foregroundLocationCheck.LocationService"
+            android:foregroundServiceType="location" />
+
         <activity
-            android:name="com.remlocteam.remloc1.MapsActivity"
+            android:name=".MapActivity"
             android:exported="true"
-            android:parentActivityName="com.remlocteam.remloc1.MapActivity" >
-        </activity>
+            android:parentActivityName=".HomeActivity" />
+        <activity
+            android:name=".MapsActivity"
+            android:exported="true"
+            android:parentActivityName=".MapActivity" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-                android:value="AIzaSyCjRxKpt1rFfCDXUl0zd1_tqZcvp1ldWhY" />
+            android:value="AIzaSyCjRxKpt1rFfCDXUl0zd1_tqZcvp1ldWhY" />
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
         <activity
-            android:name="com.remlocteam.remloc1.HomeActivity"
-            android:exported="false" />
+            android:name=".HomeActivity"
+            android:exported="true" />
         <activity
-            android:name="com.remlocteam.remloc1.MainActivity"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
     </application>
 
