Location tracking redone(Start)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,10 @@
             android:name=".foregroundLocationCheck.LocationService"
             android:foregroundServiceType="location" />
 
+        <service android:name=".backgroundLocationTrack.LocationTrackingService"
+            android:foregroundServiceType="location"
+            android:exported="false" />
+
         <activity
             android:name=".MapActivity"
             android:exported="true"
