--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1"
 }
 
 apply plugin: 'com.android.application'
